# GGI_GA

./: CMakeLists.txt  README.md  grammar.h
DataFromRegex/: generateRegexDataSets.py
DataFromRegex/RegexDataSets/: NegData.txt  PosData.txt
DataManipulation/: database.cpp  database.h  datautilities.h  dataword.cpp  dataword.h  enumterminalsmap.cpp  enumterminalsmap.h
GeneticAlgorithm/: algorithmvariables.cpp  algorithmvariables.h  geneticalgorithm.cpp  geneticalgorithm.h  population.cpp  population.h  sgautiilities.h  sgautilities.h
GreibachImplementation/: grammar.cpp  grammar.cpp.autosave  grammar.h  greibachnormalformutilities.h  greibachsets.cpp  greibachsets.h
MainProgram/: main.cpp
